<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Tweetnyanへようこそ！</string>
    <string name="app_name">Tweetnyan2</string>
    <string name="app_long_name">Tweetnyan2 ver 0.1</string>

	<string name="hint_new_tweet">ここにツイートを入力してください。</string>
    <string name="hint_new_dm">ここにダイレクトメッセージを入力してください。</string>
   	<string name="hint_searched_string">検索キーワード</string>

    <string name="load_more">もっと読み込む...</string>

    <string name="create_list">リストを作成する</string>
    <string name="create_new_list_title">新しいリストを作成</string>
    <string name="list_name">リスト名</string>
    <string name="list_description">説明</string>
    <string name="privacy">プライバシー</string>
    <string name="public_list">公開</string>
    <string name="private_list">非公開</string>
    <string name="list_description_helptext">100文字以内（オプション）</string>
    <string name="now_creating_list">リストを作成しています...</string>
    <string name="now_updating_list_description">リストを更新しています...</string>
    
	<string name="take_a_picture">写真を撮影</string>
	<string name="select_a_picture">画像を選択</string>
    <string name="cancel_attached_picture">画像添付を解除</string>
    <string name="get_geolocation">ジオタグを添付</string>
    <string name="cancel_geotagging">ジオタグを削除</string>
    <string name="now_uploading_picture">画像をアップロードしています...</string>
    <string name="confirm_cancel_attach_pic">画像の添付を取り消しますか？</string>
    <string name="confirm_cancel_geotag">ジオタグの添付を取り消しますか？</string>

   	<string name="search_result">検索結果</string>
   	<string name="no_search_result">検索結果はありませんでした。</string>
   	<string name="save_this_search_result">この検索を保存</string>
   	<string name="delete_this_saved_search">この保存した検索を削除</string>

    <string name="select_account">アカウント選択</string>
    <string name="add_account">アカウント追加...</string>
   	<string name="confirm_delete">削除しますか？</string>
   	<string name="warn_max_accounts">アカウントは10個以上追加できません。</string>

   	<string name="profile">プロフィール</string>
   	<string name="a_users_profile">%1$sのプロフィール</string>
    <string name="edit">編集</string>
   	<string name="tweet">ツイート</string>
   	<string name="favorite">お気に入り</string>
   	<string name="follow">フォロー</string>
   	<string name="follower">フォロワー</string>
   	<string name="list">リスト</string>
   	<string name="numof_tweets">%1$d ツイート</string>
   	<string name="numof_favorite">%1$d お気に入り</string>
   	<string name="numof_follow">%1$d フォロー</string>
   	<string name="numof_follower">%1$d フォロワー</string>

   	<string name="edit_profile">プロフィール編集</string>
   	<string name="select_profile_icon">アイコンの選択</string>
   	<string name="name">名前</string>
   	<string name="current_location">現在の場所</string>
   	<string name="web">ウェブ</string>
	<string name="self_introduction">自己紹介（最大160文字）</string>
	<string name="save">保存</string>
	<string name="now_saving">保存しています...</string>
   	
   	<string name="search_related_tweets">関連ツイートを検索</string>
   	<string name="create_directmessage">DMを送信</string>
   	<string name="add_list">リストに追加</string>
    <string name="retweet_by_others">みんなのリツイート</string>
    <string name="retweet_by_you">あなたのリツイート</string>
    <string name="your_tweet_rewteeted">リツイートされたツイート</string>

    <string name="block">ブロック</string>
    <string name="report_spam">スパムとして報告</string>
    
    <string name="user_follows_you">%1$sは%2$sをフォローしています</string>
    <string name="user_notfollows_you">%1$sは%2$sをフォローしていません</string>
    
    <string name="tab_home">ホーム</string>
    <string name="tab_mention">＠関連</string>
    <string name="tab_directmessage">DM</string>
    <string name="tab_list">リスト</string>
    <string name="tab_search">検索</string>

    <string name="new_tweet">新規</string>
    <string name="refresh">更新</string>
    <string name="my_profile">マイプロフィール</string>
    <string name="switch_account">アカウント切り替え</string>
    <string name="settings">設定</string>
    <string name="about">About</string>
    <string name="signin">サインイン</string>
    <string name="get_pin">PINを取得</string>
    <string name="authenticate">認証する</string>
    <string name="notice_authentication">PINを取得して、認証を行ってください。</string>
    <string name="success_authentication">認証に成功しました。</string>
    <string name="failed_authentication">認証に失敗しました。</string>
    <string name="create_new_tweet">新規ツイート</string>
    <string name="send">送信</string>
    <string name="select_a_picture">画像を選択</string>
    <string name="cancel_attached_picture">添付を取り消す</string>
	<string name="take_a_picture">写真を撮る</string>
	<string name="failed_to_tweet">ツイートに失敗しました。</string>
	<string name="reply_to_user">%1$s への返信</string>
	<string name="now_sending">送信しています...</string>
	
	<string name="over100users_retweet">%1$sと100+人がリツイート</string>
	<string name="n_users_retweet">%1$sと%2$d人がリツイート</string>
	<string name="a_user_retweet">%1$sがリツイート</string>
	
	<string name="directmessage">ダイレクトメッセージ</string>
	<string name="destination">宛先</string>
    <string name="failed_to_send_dm">メッセージの送信に失敗しました(code=%1$d)</string>

	<string name="n_selected">%1$d個を選択</string>

    <string name="saved_search">保存した検索</string>
    <string name="trends">トレンド（日本）</string>

    <string name="subtitle_user_favorites">%1$sのお気に入り</string>

   	<string name="a_user_followed">%1$sがフォローされている</string>
 	<string name="a_user_following">%1$sがフォローしている</string>

 	<string name="a_users_list">%1$sのリスト</string>

    <string name="qa_do_reply">返信</string>
    <string name="qa_do_retweet">リツイート</string>
    <string name="qa_confirm_retweet">リツイートしますか？</string>
    <string name="qa_do_retweet_with_comment">コメント付きRT</string>
    <string name="qa_do_favorite">お気に入りに追加</string>
    <string name="qa_do_unfavorite">お気に入りから削除</string>
    <string name="qa_show_talking">会話を表示</string>
    <string name="qa_open_googlemap">地図を開く</string>
    <string name="qa_do_delete">削除</string>
    <string name="qa_confirm_delete_directmessage">このメッセージを削除しますか？</string>
    <string name="qa_now_deleting_directmessage">メッセージを削除しています...</string>
    <string name="qa_confirm_delete_my_tweet">このツイートを削除しますか？</string>
    <string name="qa_now_deleting_my_tweet">ツイートを削除しています...</string>
    
    <string name="confirm_clear_iconcache">アイコンキャッシュを消去しますか？</string>
    <string name="now_clear_iconcache">アイコンキャッシュを消去しています...</string>
    
    <string name="empty_list">リストはありません</string>
    <string name="edit_this_list">リストの詳細を編集</string>
    <string name="delete_this_list">リストを削除</string>
    <string name="confirm_delete_list">リストを削除しますか？</string>
    <string name="now_deleting_list">リストを削除しています...</string>
    
    <string name="follow_this_list">リストをフォロー</string>
    <string name="unfollow_this_list">リストをアンフォロー</string>
    <string name="user_following_this_list">フォローしているユーザー</string>

    <string name="error_get_tweets">ツイートの取得に失敗しました(code=%1$d)</string>
    <string name="error_tweeting">ツイートに失敗しました(code=%1$d)</string>
    <string name="error_retweet">リツイートに失敗しました(code=%1$d)</string>
    <string name="error_favorite">お気に入りの追加に失敗しました(code=%1$d)</string>
    <string name="error_unfavorite">お気に入りの削除に失敗しました(code=%1$d)</string>
    <string name="error_to_del_directmessage">メッセージの削除に失敗しました(code=%1$d)</string>
    <string name="error_to_del_tweet">ツイートの削除に失敗しました(code=%1$d)</string>
    <string name="error_uploading_pic">画像のアップロードに失敗しました。</string>
    <string name="error_get_profile">プロフィールの取得に失敗しました(code=%1$d)</string>
    <string name="error_save_profile">プロフィールの保存に失敗しました(code=%1$d)</string>
    <string name="error_save_profile_icon">プロフィールアイコンの保存に失敗しました</string>
    <string name="error_add_saved_search">検索の保存に失敗しました(code=%1$d)</string>
    <string name="error_remove_saved_search">保存した検索の削除に失敗しました(code=%1$d)</string>
    <string name="error_delete_list">リストの削除に失敗しました(code=%1$d)</string>
    <string name="error_update_list">リストの更新に失敗しました(code=%1$d)</string>
    <string name="error_failed_to_follow_list">リストのフォローに失敗しました(code=%1$d)</string>
    <string name="error_failed_to_unfollow_list">リストのアンフォローに失敗しました(code=%1$d)</string>
    <string name="error_failed_to_get_following_list">ユーザーの取得に失敗しました(code=%1$d)</string>
    
</resources>
