<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notice_authentication" />

    <EditText
        android:id="@+id/edit_input_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_get_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_pin" />

        <Button
            android:id="@+id/btn_authenticate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authenticate" />

    </LinearLayout>

</LinearLayout>