<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <ScrollView android:id="@+id/scrollView1" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <LinearLayout android:id="@+id/linearLayout5" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="fill_parent">
                <ImageView android:src="@drawable/ic_dummy" android:layout_margin="3dip" android:id="@+id/profile_icon" android:layout_height="48dip" android:layout_width="48dip"></ImageView>
                <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout2" android:layout_margin="3dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <Button android:text="@string/select_profile_icon" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_margin="3dip" android:id="@+id/select_icon"></Button>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout3" android:layout_height="wrap_content" android:layout_margin="3dip" android:layout_width="fill_parent">
                <TextView android:text="@string/name" android:id="@+id/textView2" android:layout_marginTop="3dip" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
                <EditText android:id="@+id/edit_user_name" android:layout_height="wrap_content" android:layout_width="fill_parent" android:singleLine="true"></EditText>
                <TextView android:text="@string/current_location" android:id="@+id/textView3" android:layout_marginTop="5dip" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
                <EditText android:id="@+id/edit_current_location" android:layout_height="wrap_content" android:layout_width="fill_parent" android:singleLine="true"></EditText>
                <TextView android:text="@string/web" android:id="@+id/textView4" android:layout_marginTop="5dip" android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
                <EditText android:id="@+id/edit_web" android:layout_height="wrap_content" android:layout_width="fill_parent" android:singleLine="true"></EditText>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/self_introduction" />

                    <TextView
                        android:id="@+id/numof_characters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />

                </LinearLayout>
                <EditText android:inputType="textMultiLine" android:minLines="4" android:id="@+id/edit_self_introduction" android:gravity="top" android:layout_height="wrap_content" android:layout_width="fill_parent"></EditText>
                <LinearLayout android:id="@+id/linearLayout4" android:layout_height="wrap_content" android:layout_width="fill_parent">
                    <Button android:text="@string/save" android:id="@+id/btn_save" android:layout_height="wrap_content" android:layout_width="100dip"></Button>
                    <Button android:text="@android:string/cancel" android:id="@+id/btn_cancel" android:layout_height="wrap_content" android:layout_width="100dip"></Button>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    
</LinearLayout>
