<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <TextView android:text="@string/destination" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

        <EditText
            android:id="@+id/edit_direct_message_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout3" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1">

        <EditText
            android:id="@+id/edit_direct_message_body"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/hint_new_dm"
            android:inputType="textMultiLine" >
</EditText>

        <TextView
            android:id="@+id/numof_dm_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="4dp"
            android:layout_weight="0"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceMedium" >
</TextView>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginBottom="3dip">
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/send" android:id="@+id/btn_send_direct_message" android:layout_weight="1"></Button>

        <Button
            android:id="@+id/btn_cancel_direct_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" >
</Button>
    </LinearLayout>
    
</LinearLayout>
