<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/profile_icon"
                    android:layout_width="48dip"
                    android:layout_height="48dip"
                    android:layout_margin="5dip"
                    android:src="@drawable/ic_dummy" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/txt_user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <ImageView
                            android:id="@+id/protected_user_icon"
                            android:layout_width="16dip"
                            android:layout_height="16dip"
                            android:layout_marginLeft="5dip"
                            android:layout_marginTop="3dip"
                            android:src="@android:drawable/ic_lock_lock"
                            android:visibility="invisible" />

                        <ImageView
                            android:id="@+id/verified_icon"
                            android:layout_width="16dip"
                            android:layout_height="16dip"
                            android:layout_marginLeft="5dip"
                            android:layout_marginTop="3dip"
                            android:src="@drawable/verified"
                            android:visibility="invisible" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_screen_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/txt_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="4dp"
                android:text="Now loading..." />

            <br.com.dina.ui.widget.UITableView
                android:id="@+id/tableView"
                style="@style/UITableView" >
            </br.com.dina.ui.widget.UITableView>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dip"
                android:layout_marginBottom="10dp" >

                <Button
                    android:id="@+id/btn_follow_or_unfollow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/follow" />

                <Button
                    android:id="@+id/btn_create_dm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="@string/create_directmessage" />

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_add_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_list" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>